--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body {
 .section {
     padding: 15rem 3rem;
     border-top: 1px solid #ddd;
-
     transition: transform 1s, opacity 1s;
 }
 
@@ -379,11 +378,10 @@ h4 {
 
 /* SLIDER */
 .slider {
-    max-width: 100rem;
+    width: 100rem;
     height: 50rem;
     margin: 0 auto;
     position: relative;
-
     /* IN THE END */
     overflow: hidden;
 }
@@ -760,7 +758,14 @@ h4 {
     .features {
         grid-template-columns: 1fr;
         gap: 3rem;
-        margin: 0 2rem;
+        margin: 0 1rem;
+    }
+
+    .features__feature {
+        align-self: center;
+        justify-self: center;
+        width: 100%;
+        font-size: 1rem;
     }
 
     .operations__tab-container {
@@ -777,7 +782,7 @@ h4 {
     }
 
     .slider {
-        height: 40rem;
+        height: 70rem;
     }
 }
 
